--- a/src/main/resources/static/luzhanqi.html
+++ b/src/main/resources/static/luzhanqi.html
@@ -9,380 +9,392 @@
 </head>
 <body>
 
+<div id="zhuangtaiban">
+	<span>轮到</span>
+	<span id="xingdongfang">红方</span>
+	<span>行动</span>
+	<span>&nbsp; | &nbsp;动作:</span>
+	<span id="caozuo">翻棋</span>
+</div>
+
 <div id="junqi">
 	<ul>
-		<li>
+		<li id="bh0v12">
 			<div class="bingzhan"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh0v12"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh1v12">
 			<div class="dabenying"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh1v12"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh2v12">
 			<div class="bingzhan"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh2v12"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh3v12">
 			<div class="dabenying"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh3v12"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh4v12">
 			<div class="bingzhan"></div>
 			<div class="xiannan"></div>
-			<div id="bh4v12"></div>
+			<div name="qiwei"></div>
 		</li>
 		
-		<li>
+		<li id="bh0v11">
 			<div class="bingzhan"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh0v11"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh1v11">
 			<div class="bingzhan"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh1v11"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh2v11">
 			<div class="bingzhan"></div>
 			<div class="xiandong"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh2v11"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh3v11">
 			<div class="bingzhan"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh3v11"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh4v11">
 			<div class="bingzhan"></div>
 			<div class="xiannan"></div>
-			<div id="bh4v11"></div>
+			<div name="qiwei"></div>
 		</li>
 		
-		<li>
+		<li id="bh0v10">
 			<div class="bingzhan"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh0v10"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh1v10">
 			<div class="xingying"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh1v10"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh2v10">
 			<div class="bingzhan"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh2v10"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh3v10">
 			<div class="xingying"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh3v10"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh4v10">
 			<div class="bingzhan"></div>
 			<div class="xiannan"></div>
-			<div id="bh4v10"></div>
+			<div name="qiwei"></div>
 		</li>
 		
-		<li>
+		<li id="bh0v9">
 			<div class="bingzhan"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh0v9"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh1v9">
 			<div class="bingzhan"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh1v9"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh2v9">
 			<div class="xingying"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh2v9"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh3v9">
 			<div class="bingzhan"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh3v9"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh4v9">
 			<div class="bingzhan"></div>
 			<div class="xiannan"></div>
-			<div id="bh4v9"></div>
+			<div name="qiwei"></div>
 		</li>
 		
-		<li>
+		<li id="bh0v8">
 			<div class="bingzhan"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh0v8"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh1v8">
 			<div class="xingying"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh1v8"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh2v8">
 			<div class="bingzhan"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh2v8"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh3v8">
 			<div class="xingying"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh3v8"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh4v8">
 			<div class="bingzhan"></div>
 			<div class="xiannan"></div>
-			<div id="bh4v8"></div>
+			<div name="qiwei"></div>
 		</li>
 		
-		<li>
+		<li id="bh0v7">
 			<div class="bingzhan"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh0v7"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh1v7">
 			<div class="bingzhan"></div>
 			<div class="xiandong"></div>
-			<div id="bh1v7"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh2v7">
 			<div class="bingzhan"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh2v7"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh3v7">
 			<div class="bingzhan"></div>
 			<div class="xiandong"></div>
-			<div id="bh3v7"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh4v7">
 			<div class="bingzhan"></div>
 			<div class="xiannan"></div>
-			<div id="bh4v7"></div>
+			<div name="qiwei"></div>
 		</li>
 
-		<li>
+		<li id="bh0v6">
 			<div class="qianxian" id="bh0v6">前线</div>
 			<div class="xiannan"></div>
 		</li>
-		<li></li>
-		<li>
+		<li id="bh1v6"></li>
+		<li id="bh2v6">
 			<div class="qianxian" id="bh2v6">前线</div>
 			<div class="xiannan"></div>
 		</li>
-		<li></li>
-		<li>
+		<li id="bh3v6"></li>
+		<li id="bh4v6">
 			<div class="qianxian" id="bh4v6">前线</div>
 			<div class="xiannan"></div>
 		</li>	
 		
-		<li>
+		<li id="bh0v5">
 			<div class="bingzhan"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh0v5"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh1v5">
 			<div class="bingzhan"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh1v5"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh2v5">
 			<div class="bingzhan"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh2v5"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh3v5">
 			<div class="bingzhan"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh3v5"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh4v5">
 			<div class="bingzhan"></div>
 			<div class="xiannan"></div>
-			<div id="bh4v5"></div>
+			<div name="qiwei"></div>
 		</li>		
 		
-		<li>
+		<li id="bh0v4">
 			<div class="bingzhan"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh0v4"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh1v4">
 			<div class="xingying"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh1v4"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh2v4">
 			<div class="bingzhan"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh2v4"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh3v4">
 			<div class="xingying"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh3v4"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh4v4">
 			<div class="bingzhan"></div>
 			<div class="xiannan"></div>
-			<div id="bh4v4"></div>
+			<div name="qiwei"></div>
 		</li>		
 		
-		<li>
+		<li id="bh0v3">
 			<div class="bingzhan"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh0v3"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh1v3">
 			<div class="bingzhan"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh1v3"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh2v3">
 			<div class="xingying"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh2v3"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh3v3">
 			<div class="bingzhan"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh3v3"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh4v3">
 			<div class="bingzhan"></div>
 			<div class="xiannan"></div>
-			<div id="bh4v3"></div>
+			<div name="qiwei"></div>
 		</li>		
 		
-		<li>
+		<li id="bh0v2">
 			<div class="bingzhan"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh0v2"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh1v2">
 			<div class="xingying"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh1v2"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh2v2">
 			<div class="bingzhan"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh2v2"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh3v2">
 			<div class="xingying"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh3v2"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh4v2">
 			<div class="bingzhan"></div>
 			<div class="xiannan"></div>
-			<div id="bh4v2"></div>
+			<div name="qiwei"></div>
 		</li>		
 		
-		<li>
+		<li id="bh0v1">
 			<div class="bingzhan"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh0v1"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh1v1">
 			<div class="bingzhan"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh1v1"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh2v1">
 			<div class="bingzhan"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh2v1"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh3v1">
 			<div class="bingzhan"></div>
 			<div class="xiandong"></div>
 			<div class="xiannan"></div>
-			<div id="bh3v1"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh4v1">
 			<div class="bingzhan"></div>
 			<div class="xiannan"></div>
-			<div id="bh4v1"></div>
+			<div name="qiwei"></div>
 		</li>		
 		
-		<li>
+		<li id="bh0v0">
 			<div class="bingzhan"></div>
 			<div class="xiandong"></div>
-			<div id="bh0v0"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh1v0">
 			<div class="dabenying"></div>
 			<div class="xiandong"></div>
-			<div id="bh1v0"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh2v0">
 			<div class="bingzhan"></div>
 			<div class="xiandong"></div>
-			<div id="bh2v0"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh3v0">
 			<div class="dabenying"></div>
 			<div class="xiandong"></div>
-			<div id="bh3v0"></div>
+			<div name="qiwei"></div>
 		</li>
-		<li>
+		<li id="bh4v0">
 			<div class="bingzhan"></div>
-			<div id="bh4v0"></div>
+			<div name="qiwei"></div>
 		</li>		
 		
 	</ul>
+</div>
+
+<div id="kongzhiban">
+	<button id="refreshBtn">Refresh</button>
 </div>
 
 <script src="http://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
